# arXiv-RAG-System

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  check_ingestion_status.py  check_url_parsing.py  docker-compose.yml  dockerfile  entrypoint.sh  generate_invite.py  ingest_arxiv.py  list_invites.py  locustfile.py  pyproject.toml  run_telegram_bot.py  show_indexed_titles.py  test_db_connection.py
.github/workflows/: ci.yml
airflow/: .gitignore  requirements.txt
airflow/dags/: arxiv_ingestion_dag.py
airflow/include/: arxiv_client.py  db_upsert.py
alembic/: env.py
alembic/versions/: 17ab8692f539_add_username_to_invites.py  2b33fb1aed4c_add_telegram_chat_id_to_invites.py  45030a76a766_create_papers_and_chunks_tables.py  dc22e2b91c3b_add_invites_table_and_invite_token_to_.py  e8ef52efada3_add_query_logs_table.py  f338740ef09f_add_invites_table_and_invite_token_to_.py
arxiv-rag-phase5/arxiv-rag-system/src/: main.py
scripts/: calibrate_cache_threshold.py  seed_db.py  test_redis_connection.py  test_semantic_cache.py
src/: __init__.py  config.py  database.py  logger.py  main.py
src/certs/: aiven-ca.pem
src/models/: __init__.py
src/routers/: admin.py  ask.py  health.py  hybrid_search.py  search.py
src/schemas/: ask.py  search.py
src/services/: invite_check.py  rate_limit.py
src/services/agents/: state.py  workflow.py
src/services/agents/nodes/: generator.py  grader.py  guardrail.py  retriever.py  rewriter.py
src/services/cache/: redis_client.py  semantic_cache.py
src/services/embeddings/: chunker.py  jina.py  vector_indexer.py
src/services/monitoring/: langfuse_client.py
src/services/search/: bm25.py  client.py  hybrid.py  indexer.py  mappings.py
src/services/telegram/: bot.py
src/ui/: gradio_app.py
tests/integration/: TestAgentGraph.py  TestGraderNode.py  TestRetrieverNode.py  test_agents.py  test_health.py  test_search.py
tests/unit/: test_config.py  test_phase6.py  test_search_schemas.py  test_telegram_bot.py
