[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arxiv-rag-system"
version = "0.1.0"
description = "Production-grade Agentic RAG system for arXiv paper research"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # --- Phase 2: API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    # --- Phase 3: Database ---
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # --- Phase 4: Pipeline ---
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "tenacity>=8.3.0",
    # --- Phase 5 & 6: Search & Embeddings ---
    "opensearch-py>=2.6.0",
    # --- Phase 7: Agentic RAG ---
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    # --- Phase 8: Caching & Monitoring ---
    "redis>=5.0.0",
    "langfuse>=2.0.0,<3.0.0",
    "locust>=2.31.0",
    # --- Phase 9: Telegram Bot ---
    "python-telegram-bot>=21.0.0",
    # --- Shared utilities ---
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "rich>=13.8.0",
    "gradio>=6.19.0",
    "upstash-redis>=1.7.0",
    "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

ui = [
    "gradio>=4.42.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff (linting + formatting) ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # annotations
    "S",   # bandit security
    "RUF", # ruff-specific
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"notebooks/**" = ["ANN", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── MyPy (type checking) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*", "notebooks.*"]
ignore_errors = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-q",
]
markers = [
    "unit: fast unit tests, no external services",
    "integration: tests that require running services",
    "slow: tests that take > 5 seconds",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "notebooks/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
